# moodcanvas

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: canvas.c  canvas.h  main.c  mood.c  mood.h  ui.c  ui.h
src/#archive#/: brush.c  brush.h  layer.c  layer.h  stroke.c  stroke.h
